<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello"> Привет, Практикум</string>
    <string name="night_theme" translatable="false"> Темная тема </string>
    <string name="share" translatable="false"> Поделиться приложением </string>
    <string name="support" translatable="false"> Написать в поддержку </string>
    <string name="agreement" translatable="false"> Пользовательское соглашение </string>
    <string name="input_hint" translatable="false"> Поиск </string>
    <string name="agreement_doc" translatable="false"> "https://practicum.yandex.ru/profile/android-developer/" </string>
    <string name="message_support" translatable="false"> Спасибо разработчикам и разработчицам за крутое приложение! </string>
    <string name="subject_message_support" translatable="false"> Сообщение разработчикам и разработчицам приложения Playlist Maker" </string>
    <string name="android_yandex" translatable="false"> https://yandex.ru/legal/practicum_offer/ </string>
    <string name="support_email" translatable="false"> yep4yep@gmail.com </string>
    <string name="share_type" translatable="false"> text/plain </string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="btUpdate">Обновить</string>
    <string name="country">Страна</string>
    <string name="Genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="you_searched">Вы искали</string>
    <string name="text_clear_history">Очистить историю</string>
    <string name="fav_tracks">Избранные треки</string>
    <string name="fav_playlists">Плейлисты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="noPlaylistFound">Вы не создали \n ни одного плейлиста</string>
    <string name="noFavTracksFound">Ваша медиатека пуста</string>

    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="library">Медиатека</string>


    // dialog creating new playlist
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_finish">Завершить</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="playlist_created">Плейлист "%s" создан</string>


    // dialog track delete from playlist
    <string name="dialog_delete_title">Удалить трек</string>
    <string name="dialog_delete_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="dialog_delete_delete">Удалить</string>
    <string name="dialog_delete_cancel">Отмена</string>

    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>

    //bottom sheet menu details screen
    <string name="share_bottom_sheet_menu_details_screen">Поделиться</string>
    <string name="edit_bottom_sheet_menu_details_screen">Редактировать информацию</string>
    <string name="delete_bottom_sheet_menu_details_screen">Удалить плейлист</string>


    // dialog playlist delete
    <string name="dialog_delete_playlist_title">Удалить плейлист</string>
    <string name="dialog_delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="dialog_delete_playlist_delete">Да</string>
    <string name="dialog_delete_playlist_cancel">Нет</string>

    <string name="playlist_is_empty">В этом плейлисте еще нет треков</string>



</resources>