<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainLayout">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        style="@style/MainHeadText"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/search"
        style="@style/MainButton"
        android:onClick="click_search"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/library"
        style="@style/MainButton"
        android:onClick="click_library"
        android:text="@string/library"
        app:icon="@drawable/library" />

    <Button
        android:id="@+id/settings"
        style="@style/MainButton"
        android:onClick="click_settings"
        android:text="@string/settings"
        app:icon="@drawable/settings" />


</LinearLayout>
</FrameLayout>