<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

        <item
            android:id="@+id/searchFragment"
            android:enabled="true"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            />

        <item
            android:iconTint="@color/buttom_nav_color"
            android:id="@+id/libraryFragment"
            android:icon="@drawable/ic_library"
            android:title="@string/library"/>

        <item
            android:iconTint="@color/buttom_nav_color"
            android:id="@+id/settingsFragment"
            android:enabled="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

</menu>