<?xml version="1.0" encoding="utf-8"?>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.search.SearchActivity"
    >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/HeadText"
            android:layout_marginLeft="16dp"
            android:text="@string/search" /> </FrameLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/backgroud_edit_text"

        >

        <EditText
            tools:text="апыпарыапрпрыпрыпреерооофаваррреяя"
            android:id="@+id/inputEditText"
            style="@style/EditTextBar"
            android:paddingEnd="27dp"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:background="@drawable/backgroud_edit_text"
            android:drawableStart="@drawable/ic_search_small"
            android:ellipsize="end"
            android:hint="@string/input_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        <ImageView
            style="@style/ic_clear"
            android:id="@+id/clearIcon"
            android:src="@drawable/ic_clear_search"
            android:visibility="gone"
            />



    </FrameLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="#6200EE"
        android:visibility="gone"/>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="124dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textSearchHistory"
                style="@style/history_headline"
                android:text="@string/you_searched"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="visible"/>


            <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintTop_toBottomOf="@id/textSearchHistory"
                android:id="@+id/rcTrackList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_goneMarginTop="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"/>


            <Button
                app:layout_constraintTop_toBottomOf="@id/rcTrackList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/buttonClearHistory"
                android:text="@string/text_clear_history"
                android:gravity="center"
                app:cornerRadius="54dp"
                android:layout_marginTop="24dp"
                style="@style/button_clear_history"
                android:visibility="visible"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        tools:ignore="ExtraText">


        <ImageView
            android:id="@+id/imagePlaceholder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            style="@style/plaseholder_image"
            android:visibility="gone"
            tools:visibility="visible"/>


        <TextView
            app:layout_constraintTop_toBottomOf="@id/imagePlaceholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:id="@+id/textPlaceholder"
            style="@style/placeholder_text"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:text="@string/something_went_wrong" />

        <Button
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/textPlaceholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:id="@+id/buttonUpdatePlaceholder"
            style="@style/placeholder_button"
            android:layout_marginTop="24dp"
            android:text="@string/btUpdate"
            android:visibility="invisible"
            app:cornerRadius="54dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
