<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <ImageButton
        style="@style/BackIconHead"
        android:id="@+id/back_from_AP"
        android:background="@null"
        android:contentDescription="Назад"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />


    <ImageView
        android:id="@+id/cover_AP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/back_from_AP"
        />

    <TextView
        android:id="@+id/track_name"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/cover_AP"
        tools:text="Yesterday (Remastered 2009)hghghjgjgjhgjgj"
        style="@style/track_name_AP_screen"
        android:singleLine="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constrainedWidth="true"/>

    <TextView
        android:id="@+id/artist_name"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        app:layout_constraintHorizontal_bias="0"
        tools:text="The Beatles"
        style="@style/artist_name_AP_screen"
        android:singleLine="true"
        app:layout_constrainedWidth="true"/>


    <ImageButton
        android:id="@+id/add_to_PL_button"
        android:src="@drawable/ic_add_to_pl_button"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        android:background="@null"
        style="@style/ic_add_to_pl" />



    <ImageButton
        android:id="@+id/play_button"
        android:background="@null"
        android:src="@drawable/ic_play_button"
        app:layout_constraintEnd_toStartOf="@+id/favorite_button"
        app:layout_constraintStart_toEndOf="@id/add_to_PL_button"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        style="@style/ic_play_button_AP_screen" />

    <ImageButton
        android:id="@+id/favorite_button"
        android:src="@drawable/fav_button"
        android:clickable="true"
        android:onClick="myButtonClicked"
        android:background="@null"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/play_button"
        app:layout_constraintTop_toTopOf="@id/add_to_PL_button"
        style="@style/ic_fav_audioplayer_screen" />

    <TextView
        android:id="@+id/current_time"
        android:text="00:00"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        style="@style/current_time_AP_screen" />

    <TextView
        android:id="@+id/duration"
        android:layout_marginTop="39dp"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_time"
        style="@style/params_AP_screen" />

    <TextView
        android:id="@+id/duration_result"
        tools:text="05:57"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/duration"
        style="@style/results_AP_screen" />

    <TextView
        android:id="@+id/album"
        android:layout_marginTop="17dp"
        android:text="@string/album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration"
        style="@style/params_AP_screen"
        />

    <TextView
        android:id="@+id/album_result"
        tools:text="Yesterday (Remas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/album"
        style="@style/results_AP_screen"
        android:layout_width="180dp"
        android:singleLine="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_bias="1"
        android:gravity="end"

        />

    <TextView
        android:id="@+id/year"
        android:layout_marginTop="17dp"
        android:text="@string/year"
        app:layout_goneMarginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album"
        style="@style/params_AP_screen" />

    <TextView
        android:id="@+id/year_result"
        tools:text="1969"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/year"
        style="@style/results_AP_screen" />

    <TextView
        android:id="@+id/genre"
        android:layout_marginTop="17dp"
        android:text="@string/Genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year"
        style="@style/params_AP_screen" />

    <TextView
        android:id="@+id/genre_result"
        tools:text="Rock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/genre"
        style="@style/results_AP_screen" />

    <TextView
        android:id="@+id/country"
        android:layout_marginTop="17dp"
        android:text="@string/country"
        android:layout_marginBottom="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/params_AP_screen" />

    <TextView
        android:id="@+id/country_result"
        tools:text="Великобритнания"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/country"
        style="@style/results_AP_screen" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>