<?xml version="1.0" encoding="utf-8"?>


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.search.SearchActivity"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            style="@style/BackIconHead"
            android:src="@drawable/arrow"
            android:id="@+id/back" />
        <TextView
            style="@style/HeadText"
            android:text="@string/search" /> </FrameLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/backgroud_edit_text"

        >

        <EditText
            tools:text="апыпарыапрпрыпрыпреерооофаваррреяя"
            android:id="@+id/inputEditText"
            style="@style/EditTextBar"
            android:paddingEnd="27dp"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:background="@drawable/backgroud_edit_text"
            android:drawableStart="@drawable/ic_search_small"
            android:ellipsize="end"
            android:hint="@string/input_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        <ImageView
            style="@style/ic_clear"
            android:id="@+id/clearIcon"
            android:src="@drawable/ic_clear_search"
            android:visibility="gone"
            />



    </FrameLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="#6200EE"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/placeholderMessage"
        style="@style/placeholder_layout"
        android:layout_height="288dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imagePlaceholder"
            style="@style/plaseholder_image" />


        <TextView
            android:id="@+id/textPlaceholder"
            style="@style/placeholder_text"
            android:layout_height="102dp"
            tools:text="Проблемы со связью \n \n
Загрузка не удалась. Проверьте подключение к интернету" />

        <Button
            android:id="@+id/buttonUpdatePlaceholder"
            style="@style/placeholder_button"
            android:layout_marginTop="24dp"
            android:text="@string/btUpdate"
            android:visibility="invisible"
            app:cornerRadius="54dp" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="132dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="18dp">

            <TextView
                android:id="@+id/textSearchHistory"
                style="@style/history_headline"
                android:text="Вы искали"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="visible"/>


            <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintTop_toBottomOf="@id/textSearchHistory"
                android:id="@+id/rcTrackList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"/>


            <Button
                app:layout_constraintTop_toBottomOf="@id/rcTrackList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/buttonClearHistory"
                android:text="Очистить историю"
                android:gravity="center"
                app:cornerRadius="54dp"
                android:layout_marginTop="24dp"
                style="@style/button_clear_history"
                android:visibility="visible"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
